Guessing Game without correct jquery connection

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="bootstrap-css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="bootstrap-css/bootstrap-theme.css">
     <link rel="stylesheet" type="text/css" href="main.css">
+
+   
 </head>
 
 <body id="body">
@@ -23,7 +25,7 @@
                         <form>
                             <input id="player-input" type="text" autofocus="autofocus" max="100" min="1" placeholder="#">
                         </form>
-                        <button type="button" id="submit-guess-button" class="btn btn-success">Go!</button>
+                        <button type="button" id="submit" class="btn btn-success">Go!</button>
                         <!-- Player"s guess input, and submit button -->
                     </div>
                     <div id="guesses">
@@ -36,8 +38,8 @@
                         </ul>
                     </div>
                     <div id="menu-btns">
-                        <button type="button" id="reset-button" class="btn btn-warning">Reset</button>
-                        <button type="button" id="hint-button" class="btn btn-info">Hint</button>
+                        <button type="button" id="reset" class="btn btn-warning">Reset</button>
+                        <button type="button" id="hint" class="btn btn-info">Hint</button>
                     </div>
                 </div>
             </div>
@@ -56,6 +58,16 @@
             </div>
         </div>
     </div>
+
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+     
+  <!--   <script type="text/javascript" src="application.js"></script> -->
+
+    <script type="text/javascript" src="guessinggame.js"></script>
+    
 </body>
 
+
+
 </html>
+
